--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_drop_down" />
     <title>PetPaw</title>
   </head>
-  <body class="bg-amber-100 font-poppins">
+  <body class="bg-stone-300 font-poppins">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
